--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
-    "styled-components": "^5.2.3"
+    "styled-components": "^5.2.3",
+    "use-debounce": "^6.0.1"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.12.0"
